--- a/src/App.css
+++ b/src/App.css
@@ -4,27 +4,14 @@
   width: 1200px;
 
   grid-template-areas:
-  "h h"
-  "n c";
+    'h h'
+    'n c';
   grid-template-rows: 60px 1fr;
-    grid-template-columns: 2fr 10fr;
+  grid-template-columns: 2fr 10fr;
   /* grid-gap: 10px; */
 }
 
-.header {
-  grid-area: h;
-  background-color: aquamarine;
-}
-.header img {
-  width: 100px;
-}
-
-.nav {
-  grid-area: n;
-  background-color: brown;
-}
-
-.content {
+.app-wrapper-content {
   grid-area: c;
   background-color: chartreuse;
 }
