--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -8,6 +8,12 @@
   color: white;
 }
 
+.avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 6px;
+}
+
 .dialog {
   padding: 5px;
   color: white;
